<resources>
    <string name="app_name">Teste Noverde</string>
    <string name="welcome">Bem-vindo à Noverde</string>
    <string name="freedom_hand">Liberdade financeira na palma da mão</string>
    <string name="take_simulation">Fazer simulação</string>
    <string name="info_cpf">Informe seu CPF</string>
    <string name="want_you">Queremos te ver #noverde, mas primeiro precisamos saber quem é você ;)</string>
    <string name="typeit_cpf">Digite seu cpf aqui</string>
    <string name="next">Próximo</string>
    <string name="amount_you_need">Quanto você precisa?</string>
    <string name="info_amount">Informe um valor entre R$500 e R$4000</string>
    <string name="typeit_amount">Digite o valor desejado aqui</string>
    <string name="request">Solicitar</string>
    <string name="you_approved">Uhuuu, \n Você foi aprovado!</string>
    <string name="you_reproved">Ahhh que pena! \n\nNão foi possível aprovar \nseu crédito :(</string>
    <string name="amount_released">Valor liberado</string>
    <string name="installment">Parcelas a pagar</string>
    <string name="first_duedate">Primeiro vencimento em</string>
    <string name="amount_below">* o valor liberado é menor do que o valor escolhido</string>
    <string name="unable_approved">Não foi possível aprovar\n seu crédito</string>
    <string name="amount_empty">Por favor, digite um valor válido</string>

    <!-- Errors -->
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="ERROR_REQUEST">Não foi possível enviar sua solicitação. Por favor, tente novamente mais tarde.</string>
    <string name="MISSING_AUTHENTICATION">Usuário não autenticado</string>

</resources>